# cargo-hilly

./: CHANGELOG.md  Cargo.toml  readme.md
.github/workflows/: code-checking.yml  commit-lint.yml  release-pr.yml
src/: lib.rs  main.rs
tests/: mixed.rs  monorepo.rs  not-found.rs  single-crate-mixed.rs
tests/resources/mixed/: Cargo.toml
tests/resources/mixed/src/: lib.rs
